--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
@@ -21,6 +22,7 @@
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
