--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,30 +5,9 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "node_modules": true,
-    ".gitignore": true,
-    "postcss.config.js": true,
-    "package-lock.json": true,
-    "README.md": true,
-    "tsconfig.json": true,
-    "next.config.js": true,
-    "next-env.d.ts": true,
-    ".vscode": true,
-    ".next": true
+    "**/Thumbs.db": true
   },
-  "hide-files.files": [
-    "node_modules",
-    ".gitignore",
-    "postcss.config.js",
-    "package-lock.json",
-    "README.md",
-    "tsconfig.json",
-    "next.config.js",
-    "next-env.d.ts",
-    ".vscode",
-    ".next"
-  ],
+  "hide-files.files": [],
   "editor.tokenColorCustomizations": {
     "comments": "",
     "textMateRules": []
