--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.5.1",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-text-transition": "^3.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
