--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-masonry-css": "^1.0.16",
     "react-text-transition": "^3.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
